# crowndock

./: Cargo.toml
src/: cli.rs  config.rs  desktop.rs  dnd.rs  dock.rs  error.rs  icon.rs  item.rs  launcher.rs  lib.rs  main.rs  persistence.rs  render.rs  renderer.rs  source.rs  theme.rs  watcher.rs  window.rs
src/shaders/: rect.wgsl
src/ui/: icon.rs  mod.rs  rect.rs  state.rs
src/wayland/: background_effect.rs  compositor.rs  layer.rs  mod.rs  output.rs  pointer.rs  registry.rs  seat.rs  wl_data_device.rs  wl_data_offer.rs  wl_data_source.rs
src/wayland/handlers/: compositor.rs  data_device.rs  layer.rs  mod.rs  output.rs  pointer.rs  registry.rs  seat.rs  shm.rs
